--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <div class="row">
                         <div class="contact-left">
                             <h1 class="sub-title">Contact Me</h1>
-                            <p><i class="fa-solid fa-paper-plane"></i> Qashifsiddiqui12@gmai.com</p>
+                            <p><i class="fa-solid fa-paper-plane"></i> Qashifsiddiqui12@gmail.com</p>
                             <p><i class="fa-solid fa-square-phone"></i> +91 8299223894</p>
                             <div class="social-icons">
                                 <a href="https://www.facebook.com/profile.php?id=100012827168125"><i class="fa-brands fa-facebook"></i></a>
