update in 2 july 2024

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </div>
                     <div>
                         <i class="fa-brands fa-figma"></i>
-                        <h2>App design</h2>
+                        <h2>ML/AI Engineer</h2>
                         <p>Crafting user-centric app experiences. Proficient in UI/UX design principles. Transforming ideas into visually appealing and functional apps. Excited to innovate and enhance user interactions.</p>
                         <a href="https://en.wikipedia.org/wiki/Mobile_app_development">Learn more</a>
                     </div>
@@ -113,11 +113,11 @@
                 <h1 class ="sub-title">My Work</h1>
                 <div class="work-list">
                     <div class="work">
-                    <img src="work-1.png">
-                    <div class="layer">
-                        <h3>Weather Web App</h3>
-                        <a href="https://kashif-kairo.github.io/Weather_web_app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                    </div>
+                    <img src="work-1.jpg">
+                        <div class="layer">
+                            <h3>Weather Web App</h3>
+                            <a href="https://kashif-kairo.github.io/Weather_web_app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
 
                     </div>
                     <div class="work">
@@ -134,11 +134,18 @@
                             <a href="https://github.com/kashif-kairo/Python-Projects"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
+                    <div class="work">
+                        <img src="work-4.png">
+                        <div class="layer">
+                            <h3>Stock Price Predicator</h3>
+                            <a href="https://stockpricepredicator.onrender.com"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
+                    </div>
 
 
 
                 </div>
-                <a href="#" class="btn">See more</a>
+                <!-- <a href="#" class="btn">See more</a> -->
             </div>
 
         </div>
@@ -156,7 +163,7 @@
                                 <a href="https://www.instagram.com/_m_kairo/"><i class="fa-brands fa-instagram"></i></a>
                                 <a href="https://github.com/kashif-kairo/"><i class="fa-brands fa-github"></i></a>
                             </div>
-                            <a href="Resume-Mohammad-Kashif.pdf" download class="btn btn2">Download CV</a>
+                            <a href="Kashif%20Resume%20Data%20Analyst%20Intern.pdf" download class="btn btn2">Download CV</a>
                         </div>
                         <div class="contact-right">
                             <form name="submit-to-google-sheet">
