updated 4th JULY

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             <p><i class="fa-solid fa-square-phone"></i> +91 8299223894</p>
                             <div class="social-icons">
                                 <a href="https://www.facebook.com/profile.php?id=100012827168125"><i class="fa-brands fa-facebook"></i></a>
-                                <a href="www.linkedin.com/in/mohammad-kashif-8513a21bb"><i class="fa-brands fa-linkedin"></i></a>
+                                <a href="www.linkedin.com/in/kashif-kairo"><i class="fa-brands fa-linkedin"></i></a>
                                 <a href="https://www.instagram.com/_m_kairo/"><i class="fa-brands fa-instagram"></i></a>
                                 <a href="https://github.com/kashif-kairo/"><i class="fa-brands fa-github"></i></a>
                             </div>
