Updated 5th July 2024

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                     <div>
                         <i class="fa-brands fa-figma"></i>
                         <h2>ML/AI Engineer</h2>
-                        <p>Crafting user-centric app experiences. Proficient in UI/UX design principles. Transforming ideas into visually appealing and functional apps. Excited to innovate and enhance user interactions.</p>
-                        <a href="https://en.wikipedia.org/wiki/Mobile_app_development">Learn more</a>
+                        <p>Transforming Data into Actionable Insights: Innovating with Machine Learning to Drive the Future of Technology.</p>
+                        <a href="https://www.ibm.com/topics/machine-learning">Learn more</a>
                     </div>
             
 
