Update 5th July 2024

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <a href="https://en.wikipedia.org/wiki/Data_analysis">Learn more</a>
                     </div>
                     <div>
-                        <i class="fa-brands fa-figma"></i>
+                        <i class="fas fa-microchip"></i>
                         <h2>ML/AI Engineer</h2>
                         <p>Transforming Data into Actionable Insights: Innovating with Machine Learning to Drive the Future of Technology.</p>
                         <a href="https://www.ibm.com/topics/machine-learning">Learn more</a>
