--- a/index.html
+++ b/index.html
@@ -190,8 +190,10 @@
                                 <a href="https://www.facebook.com/profile.php?id=100012827168125"><i class="fa-brands fa-facebook"></i></a>
                                 <a href="www.linkedin.com/in/kashif-kairo"><i class="fa-brands fa-linkedin"></i></a>
                                 <a href="https://www.instagram.com/_m_kairo/"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://www.leetcode.com/kashif2002" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/leet-code.svg" alt="kashif2002" height="30" width="40" /></a>
                                 <a href="https://github.com/kashif-kairo/"><i class="fa-brands fa-github"></i></a>
-                                <a href="https://leetcode.com/u/Kashif2002/"> <i class="cib-leetcode"> </i></a>
+                                <!-- <a href="https://leetcode.com/u/Kashif2002/"> <i class="cib-leetcode"> </i></a> -->
+
 
                             </div>
                             <a href="Kashif%20Resume%20Data%20Analyst%20Intern.pdf" download class="btn btn2">Download CV</a>
