--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="C:\Users\Kashif\Desktop\vcard-personal-portfolio\assets\images\9120007.jpg" alt="Weather Web App" loading="lazy">
+                  <img src="assets\images\9120007.jpg" alt="Weather Web App" loading="lazy">
                 </figure>
                 <h3 class="project-title">Weather Web App</h3>
                 <p class="project-category">Web development</p>
@@ -857,7 +857,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="C:\Users\Kashif\Desktop\vcard-personal-portfolio\assets\images\stock-trading-workplace-background.jpg" alt="Weather Web App" loading="lazy">
+                  <img src="assets\images\stock-trading-workplace-background.jpg" alt="Weather Web App" loading="lazy">
                 </figure>
                 <h3 class="project-title">Stock Price Predicator</h3>
                 <p class="project-category">M.L Applications</p>
