--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>M.LApplications</button>
+                <button data-select-item>Applications</button>
               </li>
 
               <li class="select-item">
