--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="https://img.icons8.com/?size=100&id=62903&format=png&color=000000" alt="mobile app icon" width="40">
+                <img src="assets/images/ai.svg.svg" alt="mobile app icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -839,6 +839,19 @@
             </li>
 
             <li class="project-item active" data-filter-item data-category="web development">
+              <a href="https://kashif-kairo.github.io/Portfolio-website1/">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="assets\images\desktop1.png" alt="Portfolio Website" loading="lazy">
+                </figure>
+                <h3 class="project-title">Portfolio Website</h3>
+                <p class="project-category">Web development</p>
+              </a>
+            </li>
+
+            <li class="project-item active" data-filter-item data-category="web development">
               <a href="https://kashif-kairo.github.io/tic-tac-toe/">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -861,6 +874,19 @@
                 </figure>
                 <h3 class="project-title">Stock Price Predicator</h3>
                 <p class="project-category">M.L Applications</p>
+              </a>
+            </li>
+
+            <li class="project-item active" data-filter-item data-category="applications">
+              <a href="https://github.com/kashif-kairo/Python-Projects">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="assets\images\News.jpg" alt="News App using Python" loading="lazy">
+                </figure>
+                <h3 class="project-title">News App using Python</h3>
+                <p class="project-category">Python Applications</p>
               </a>
             </li>
 
