--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
           - clients
         -->
 
-        <!-- <section class="clients">
+        <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
 
@@ -533,43 +533,43 @@
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-1-color.png" alt="client logo">
+                <img src="./assets/images/Tata.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-2-color.png" alt="client logo">
+                <img src="./assets/images/pngegg.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-3-color.png" alt="client logo">
+                <img src="./assets/images/niet.svg" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-4-color.png" alt="client logo">
+                <img src="./assets/images/infosys-logo-png.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-5-color.png" alt="client logo">
+                <img src="./assets/images/ibm.png" alt="client logo">
               </a>
             </li>
 
-            <li class="clients-item">
+            <!-- <li class="clients-item">
               <a href="#">
                 <img src="./assets/images/logo-6-color.png" alt="client logo">
               </a>
-            </li>
+            </li> -->
 
           </ul>
 
-        </section> -->
+        </section> 
 
       </article>
 
