--- a/index.html
+++ b/index.html
@@ -561,11 +561,11 @@
               </a>
             </li>
 
-            <!-- <li class="clients-item">
+            <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-6-color.png" alt="client logo">
+                <img src=".\assets\images\IMG_20240727_195119-removebg-preview.v1.png" alt="client logo">
               </a>
-            </li> -->
+            </li>
 
           </ul>
 
