--- a/index.html
+++ b/index.html
@@ -878,6 +878,19 @@
             </li>
 
             <li class="project-item active" data-filter-item data-category="applications">
+              <a href="https://kashif-background-remover.streamlit.app">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="assets\images\1-Protrait.png" alt="Image Background Remover" loading="lazy">
+                </figure>
+                <h3 class="project-title">Image Background Remover</h3>
+                <p class="project-category">Python Applications</p>
+              </a>
+            </li>
+
+            <li class="project-item active" data-filter-item data-category="applications">
               <a href="https://github.com/kashif-kairo/Python-Projects">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -889,6 +902,8 @@
                 <p class="project-category">Python Applications</p>
               </a>
             </li>
+
+            
 
           </ul>
 
