--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vCard - Personal Portfolio</title>
+  <title> KASHIF - Personal Portfolio</title>
 
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/logo1bg.png" type="image/x-icon">
 
   <!--
     - custom css link
@@ -891,6 +891,19 @@
             </li>
 
             <li class="project-item active" data-filter-item data-category="applications">
+              <a href="https://github.com/kashif-kairo/Python-Projects">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="assets\images\News.jpg" alt="News App using Python" loading="lazy">
+                </figure>
+                <h3 class="project-title">News App using Python</h3>
+                <p class="project-category">Python Applications</p>
+              </a>
+            </li>
+
+            <li class="project-item active" data-filter-item data-category="data analysis">
               <a href="https://github.com/kashif-kairo/Python-Projects">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
