--- a/index.html
+++ b/index.html
@@ -883,6 +883,19 @@
             </li>
 
             <li class="project-item active" data-filter-item data-category="web development">
+              <a href="https://kashif-kairo.github.io/Samvidhan_Web/">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="assets\images\india-republic-day-celebration-digital-art-with-people.jpg" alt="Samvidhan Sangham" loading="lazy">
+                </figure>
+                <h3 class="project-title">Samvidhan Sangham</h3>
+                <p class="project-category">Web development</p>
+              </a>
+            </li>
+
+            <li class="project-item active" data-filter-item data-category="web development">
               <a href="https://kashif-kairo.github.io/tic-tac-toe/">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
