--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,7 @@
               <!-- <a href="https://leetcode.com/u/Kashif2002/"> -->
 
                 <figure class="blog-banner-box">
-                  <img src=".assets\images\SIH_logo_2024_horizontal.png" alt="" loading="lazy">
+                  <img src=".assets\images\SIH_logo_2024_horizontal(1).jpg" alt="" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
