--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@
             </li>
 
             <li class="project-item active" data-filter-item data-category="data analysis">
-              <a href="https://github.com/kashif-kairo/Python-Projects">
+              <a href="https://github.com/kashif-kairo/Data_Analysis_Projects/blob/main/Youtube_Trending_Videos_Analysis.ipynb">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
