--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
         </section>
 
         <section class="download-resume-section">
-          <a href="Kashif Resume Data Analyst Intern.pdf" download="Kashif Resume Data Analyst Intern.pdf" class="download-resume-button">Download Resume</a>
+          <a href="Data Analysis Kashif.pdf" download="Data Analysis Kashif.pdf" class="download-resume-button">Download Resume</a>
       </section>
         
         
@@ -956,6 +956,18 @@
                   <img src="assets\images\Youtube.png" alt="Youtube Trending Videos Analysis" loading="lazy">
                 </figure>
                 <h3 class="project-title">Youtube Trending Videos Analysis</h3>
+                <p class="project-category">Data analysis</p>
+              </a>
+            </li>
+            <li class="project-item active" data-filter-item data-category="data analysis">
+              <a href="https://github.com/kashif-kairo/Data_Analysis_Projects/blob/main/Fast_Delivery_Agents.ipynb">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="assets\images\1724384063236.png" alt="Fast_Delivery_Agents" loading="lazy">
+                </figure>
+                <h3 class="project-title">Fast_Delivery_Agents</h3>
                 <p class="project-category">Data analysis</p>
               </a>
             </li>
